--- a/basecode.css
+++ b/basecode.css
@@ -1,10 +1,11 @@
 <!-- 
-Just type in what you want 
+by ichthyosaurs.tumblr.com
 -->
 
 <html lang="en">
  
 <head>
+
 
 <meta name="color:Background" content="#ffffff"/>
 <meta name="color:Text" content="#aaa"/>
@@ -53,7 +54,7 @@ color:{color:hover};
 text-decoration: none;
 }
  
-#cunt{width:250px; height:auto;}
+#perm{width:250px; height:auto;}
 {block:PermalinkPage}
 width:410px;
 {/block:PermalinkPage}
