--- a/basecode.css
+++ b/basecode.css
@@ -441,6 +441,6 @@ $wall.masonry( 'appended', $newElems,{isAnimated: false}, function(){$newElems.f
 
 </body>
 <div style="position:fixed;bottom:10px;left:10px;">
-<a href="URLHERE">C R E D I T </a>
+<a href="http://ichthyosaurs.tumblr.com">C R E D I T </a>
     
 </html>
