--- a/basecode.css
+++ b/basecode.css
@@ -295,22 +295,24 @@ blockquote, blockquote blockquote {
     font-style: italic;
 }
  
-.audio {
-    padding: 0;
+
+#player { 
+    width:30px;
+    height:30px;
+    overflow:hidden;
+    position:absolute;
+    margin-top:45px;
+    margin-bottom:45px;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    opacity: 0.7;
+    filter:alpha(opacity=70);
+    -moz-opacity: 0.7;
+    -khtml-opacity: 0.7;
 }
-.audio_container {
-    overflow: hidden;
-    position: relative;
-    width: 100px;
-}
- 
-.soundcloud_audio_player {
-    width: 100%;
-}
- 
-.tumblr_audio_player {
-    width: 100%;
-}
+
+#albumart { float:left; margin:0px 7px;}
  
 #ask {
     width: {block:If400pxPosts}370px{/block:If400pxPosts} {block:If500pxPosts}470px{/block:If500pxPosts};
@@ -579,12 +581,10 @@ ol.notes li.note blockquote a {
             {/block:Chat}
              
             {block:Audio}
-            <div class="audioContainer">
-            {block:AudioEmbed}{AudioEmbed color="white"}{/block:AudioEmbed}
-            </div>
-            {block:IfShowCaptions}
-            {block:Caption}{Caption}{/block:Caption}
-            {/block:IfShowCaptions}
+                <div id= "player">{AudioPlayerWhite}</div>
+                <div id="albumart">{block:AlbumArt}<img src="{AlbumArtURL}" width="100">{/block:AlbumArt}</div>
+            {PlayCountWithLabel} 
+            {block:caption}<div class="caption">{caption}</div>{/block:caption}
             {/block:Audio}
              
             {block:Video}
@@ -632,7 +632,7 @@ ol.notes li.note blockquote a {
                 <a href="{PreviousPage}" class="jump_page">Forth</a>
             {/block:PreviousPage}
                            
-            {block:JumpPagination length="4"}
+            {block:JumpPagination length="5"}
                 {block:CurrentPage}
                 <span class="current_page">{PageNumber}</span>
                 {/block:CurrentPage}
