--- a/basecode.css
+++ b/basecode.css
@@ -299,10 +299,10 @@ blockquote, blockquote blockquote {
 #player { 
     width:30px;
     height:30px;
-    overflow:hidden;
     position:absolute;
-    margin-top:45px;
-    margin-bottom:45px;
+    overflow:hidden;
+    margin-top:55px;
+    margin-left:55px;
     -moz-border-radius: 30px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
@@ -310,9 +310,24 @@ blockquote, blockquote blockquote {
     filter:alpha(opacity=70);
     -moz-opacity: 0.7;
     -khtml-opacity: 0.7;
+    z-index: 10;
 }
 
-#albumart { float:left; margin:0px 7px;}
+#albumart {
+    float:left;
+    margin:10px 0px 0px 10px;
+}
+
+#caption {
+    margin-top: 140px;
+}
+
+#audioinfo {
+    line-height:24px;
+    margin-left:20px;
+    padding-left: 20px;
+    color: {color:Link};
+}
  
 #ask {
     width: {block:If400pxPosts}370px{/block:If400pxPosts} {block:If500pxPosts}470px{/block:If500pxPosts};
@@ -582,9 +597,21 @@ ol.notes li.note blockquote a {
              
             {block:Audio}
                 <div id= "player">{AudioPlayerWhite}</div>
-                <div id="albumart">{block:AlbumArt}<img src="{AlbumArtURL}" width="100">{/block:AlbumArt}</div>
-            {PlayCountWithLabel} 
+                <div id="albumart">{block:AlbumArt}<img src="{AlbumArtURL}" width="120">{/block:AlbumArt}</div>
+            <div id = "audioinfo"><br>
+            {block:TrackName}
+                <b>&nbsp;&nbsp;TRACK NAME: {TrackName} </b>
+            {/block:TrackName}<br>
+            {block:Artist}
+                 <b>&nbsp;&nbsp;ARTIST: {Artist} </b>
+             {/block:Artist} <br>
+             {block:Album}
+                <b>&nbsp;&nbsp;ALBUM: {Album}</b>
+            {/block:Album}<br>
+            &nbsp;&nbsp;{PlayCountWithLabel} <br><br>
+            
             {block:caption}<div class="caption">{caption}</div>{/block:caption}
+            </div>
             {/block:Audio}
              
             {block:Video}
