--- a/basecode.css
+++ b/basecode.css
@@ -5,11 +5,11 @@
 <!-- 
                                     :::::: don't remove credit ::::::
 |   |   |   |  |  |  | | | | |||||||||| http://officialwiccan.tumblr.com |||||||| | | | |  |  |  |  |   |   |
-				       __  __ _    _      _        _                 
-				  ___ / _|/ _(_)__(_)__ _| |_ __ _(_)__ __ __ _ _ _  
-				 / _ \  _|  _| / _| / _` | \ V  V / / _/ _/ _` | ' \ 
-				 \___/_| |_| |_\__|_\__,_|_|\_/\_/|_\__\__\__,_|_||_|
-				                                                     
+       __  __ _    _      _        _                 
+  ___ / _|/ _(_)__(_)__ _| |_ __ _(_)__ __ __ _ _ _  
+ / _ \  _|  _| / _| / _` | \ V  V / / _/ _/ _` | ' \ 
+ \___/_| |_| |_\__|_\__,_|_|\_/\_/|_\__\__\__,_|_||_|
+                                                     
 
 -->
  
@@ -257,24 +257,15 @@ blockquote, blockquote blockquote {
     border-top: 0;  
 }  
  
-#content {
-    height: auto;
-    width: 100%;
-    margin: 0 auto;
-    z-index: 999;
-    background: {color:Body Background};
-}
- 
 #entries {
     position: absolute;
-    width: {block:If250pxPosts}width: 900px;{/block:If250pxPosts} {block:If400pxPosts}400px{/block:If400pxPosts} {block:If500pxPosts}500px{/block:If500pxPosts};
-    background: {color:Body Background};
+    width: {block:If250pxPosts}800px;{/block:If250pxPosts} {block:If400pxPosts}400px{/block:If400pxPosts} {block:If500pxPosts}500px{/block:If500pxPosts};
     clear: both;
     padding-left: 60px;
     position: static;
     margin: 0 auto;
     padding-top: 40px;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     padding-right: 80px;
 }
  
@@ -284,6 +275,9 @@ blockquote, blockquote blockquote {
     margin-bottom: 50px;
     clear: both;
     margin-left: 50px;
+    float:left;
+    border-width:5px;
+    border-color:{color:Post Background};
 }
 .post img {
     max-width: 100%;
